# mrcinspector

./: .gitignore  CMakeLists.txt  README.md
include/: AxisMapping.h  DataTypes.h  Endianess.h  ExtendedHeaderType.h  IO.h  MainHeader.h  Mode.h  Print.h  Read.h
src/: IO.cpp  Print.cpp  Read.cpp  main.cpp
